--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">Hello Squirrel</string>
 
-    <string name="first_name">FIRST</string>
-    <string name="last_name">LAST</string>
-    <string name="full_name">%s %s</string>
+    <string name="first_name">Eliott</string>
+    <string name="last_name">Schaffer</string>
+    <string name="full_name">Eliott Schaffer</string>
 
-    <string name="profile_bio_text">This a short bio about myself.\nIt has multiple lines because I am\na complex being.</string>
+    <string name="profile_bio_text">  Hey There! My name is Eliott Schaffer and\n  I am a physics major at UCSB\'s College\n of Creative Studies, I like to learn new stuff and app development is the\nnext thing I want to add the my toolbelt</string>
 
     <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
-    <string name="profile_hobby_first_text">🥇 FIRST HOBBY</string>
-    <string name="profile_hobby_second_text">🥈 SECOND HOBBY</string>
-    <string name="profile_hobby_third_text">🥉 THIRD HOBBY</string>
+    <string name="profile_hobby_first_text">🥇 Learning about cool Physics concepts</string>
+    <string name="profile_hobby_second_text">🥈 Video Games</string>
+    <string name="profile_hobby_third_text">🥉 Radio Operator</string>
 </resources>
